# synapsis-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install-macos.sh  install.ps1  install.sh  uninstall-macos.sh  uninstall.ps1  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  versions.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gitleaks.yml  labeler.yml  osv-scanner.yml  release-please.yml  stale.yml
scripts/: dev-setup.sh  sync-actions.sh
src/: lib.rs
src/core/: antibrick.rs  audit_log.rs  auto_integrate.rs  crypto_plugin.rs  crypto_provider.rs  discovery_net.rs  json_rpc.rs  mcp_autoconfig.rs  mod.rs  orchestrator.rs  port_pid_protection.rs  pqc.rs  pqcrypto_provider.rs  rate_limiter.rs  resource_manager.rs  retry.rs  rpc_handlers.rs  rpc_methods.rs  security.rs  session_cleanup.rs  session_context.rs  session_id.rs  session_manager.rs  sync.rs  task_cleanup.rs  task_queue.rs  terminal_writer.rs  vault.rs  vault.rs.backup  watchdog.rs  worker.rs  zero_trust.rs
src/core/auth/: challenge.rs  classifier.rs  tpm.rs
src/core/pqc/: dilithium.rs  kyber.rs  mldsa.rs  mlkem.rs  mod.rs
src/core/recycle/: bin.rs  categorizer.rs
src/domain/: crypto.rs  entities.rs  errors.rs  mod.rs  plugin.rs  plugin_loader.rs  ports.rs  types.rs
src/domain/models/: agent.rs  mod.rs  task.rs
src/infrastructure/: agents.rs  database.rs  event_bus.rs  mod.rs  optimizer.rs  plugin.rs  shared_state.rs  skills.rs  yolo_daemon.rs
src/infrastructure/context/: context.rs  context_compression.rs  mod.rs  orchestration.rs
src/infrastructure/database/: mod.rs  multi_agent.rs  write_queue.rs
tests/: database_tests.rs  domain_tests.rs  dynamic_plugin_loading.rs  optimizer_tests.rs
