[package]
name = "synapsis-core"
version = "0.5.1"
edition = "2021"
authors = ["methodwhite"]
description = "Synapsis Core Library"
license = "BUSL-1.1"

[features]
default = []
full = ["postgres"]
pqc = ["pqcrypto-mlkem", "pqcrypto-mldsa"]
postgres = ["tokio-postgres", "deadpool-postgres"]

[lib]
name = "synapsis_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "blob", "serde_json", "sqlcipher"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
rand = "0.8"
sha2 = "0.11"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
async-trait = "0.1"
hex = "0.4"
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-mldsa = { version = "0.1", optional = true }
