[package]
name = "synapsis-core"
version = "0.9.0"
edition = "2024"
authors = ["methodwhite"]
description = "Synapsis Core Library"
license = "BUSL-1.1"

[features]
default = []
full = ["postgres"]
pqc = ["dep:prusia-vault", "prusia-vault/pqc"]
postgres = ["tokio-postgres", "deadpool-postgres"]

[lib]
name = "synapsis_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "blob", "serde_json", "sqlcipher"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
rand = "0.8"
sha2 = "0.11"
aes-gcm = "0.11"
base64 = "0.22"
async-trait = "0.1"
hex = "0.4"
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
rag-core = { git = "https://github.com/MethodWhite/rag-core", branch = "main" }
rag-graph = { git = "https://github.com/MethodWhite/rag-graph", branch = "main" }
prusia-vault = { git = "https://github.com/MethodWhite/prusia-vault", branch = "main", optional = true }
